# python-mpv-jsonipc

./: .gitignore  CLAUDE.md  README.md  docs.md  pyproject.toml  python_mpv_jsonipc.py  setup.py
python_mpv_jsonipc/: __init__.py  platform_io_wrapper.py
